--- a/order/package.json
+++ b/order/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "4.12.0",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4"
   },
