--- a/order/package.json
+++ b/order/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "tsx watch src/server.ts"
+  },
   "dependencies": {
     "@prisma/client": "4.12.0",
     "express": "^4.18.2",
