--- a/product/package.json
+++ b/product/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "tsx watch src/server.ts"
+  },
   "dependencies": {
+    "@prisma/client": "4.12.0",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4"
   },
